Refactor test cases to improve readability and maintainability: Replaced stream operations with traditional loops in CommunityBankAuthConfigurationTest and PremiumBankAuthConfigurationTest for better clarity. Updated AuthenticationControllerTest and various service tests to use HashSet and Arrays.asList for consistency. Enhanced overall code structure in test files.